// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TraceName> renders empty string error in error state 1`] = `
<span
  className="TraceName is-error "
>
  <Title
    breakable={true}
    text="Error: Unknown error"
  />
</span>
`;

exports[`<TraceName> renders error object in error state 1`] = `
<span
  className="TraceName is-error "
>
  <Title
    breakable={true}
    text="ERROR-OBJECT-MESSAGE"
  />
</span>
`;

exports[`<TraceName> renders error object with empty message in error state 1`] = `
<span
  className="TraceName is-error "
>
  <Title
    breakable={true}
    text="Error"
  />
</span>
`;

exports[`<TraceName> renders in error state 1`] = `
<span
  className="TraceName is-error "
>
  <Title
    breakable={true}
    text="TEST-ERROR-MESSAGE"
  />
</span>
`;

exports[`<TraceName> renders in loading state 1`] = `
<span
  className="TraceName  "
>
  <LoadingIndicator
    centered={false}
    small={true}
  />
</span>
`;

exports[`<TraceName> renders with className 1`] = `
<span
  className="TraceName  TEST-CLASS-NAME"
>
  <Title
    breakable={true}
    text="<trace-without-root-span>"
  />
</span>
`;

exports[`<TraceName> renders with default props 1`] = `
<span
  className="TraceName  "
>
  <Title
    breakable={true}
    text="<trace-without-root-span>"
  />
</span>
`;

exports[`<TraceName> renders with traceName 1`] = `
<span
  className="TraceName  "
>
  <Title
    breakable={true}
    text="TEST-TRACE-NAME"
  />
</span>
`;
